Improve swingup plot
Position onion skin graphic more prominently
Relabel angles to varphi
Relabel (and rescale) x and y axes

--- a/bericht-versuchsstaende/bericht-versuchsstaende.tex
+++ b/bericht-versuchsstaende/bericht-versuchsstaende.tex
@@ -109,7 +109,7 @@ Bestärkendes Lernen wurde bisher in zwei Szenarien erfolgreich getestet: dem se
 \begin{figure}
     \centering
     \includegraphics[scale=0.7]{img/uoo_ooo_3.0_around.csv.pdf}
-    \caption{Aufschwingen von der Ruhelage uoo nach ooo.}
+    \caption{Aufschwingen von der Ruhelage „\texttt{UOO}“ nach „\texttt{OOO}“.}
     \label{fig:uoo_ooo}
 \end{figure}
     
